styles.css
* {
	margin: 0;
	padding: 0;
	border: 0;
}

article, aside, details, figcaption, figure, footer, header, main, nav, section, summary {
    display:block;
}
body, h1 {
	font-family: "futura-pt",sans-serif;
	font-weight: 400;
	font-style: normal;
}
h2 {
	font-family: "future-pt",sans-serif;
	font-weight: 600;
	font-style: normal;
}
body {
	display: flex;
	flex: 1;
	flex-wrap: wrap;
	justify-content: center;
	overflow-x: hidden;
}

/***** HOME STYLES *****/
.home {
	display: flex;
	/* flex: 1; */
	/* flex-basis: 100%; */
	flex-flow: column;
	justify-content: center;
	height: 100vh;
}
.good-home, .bad-home {
	height: 45%;
	text-align: center;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
}
.good-home {
	background-color: #19629F;
	color: #FBCA31;
}
.bad-home {
	background-color: #FBCA31;
	color: #4E4E4E;
}
.home h2 {
	width: 100%;
	padding-bottom: 5%;
}
.door img {
	width: 90px;
}
.home-banner {
	background-color: #fff;
	color: #4E4E4E;
	text-align: center;
	box-shadow: 1px 1px 4px rgba(255, 255, 255, 0.5);
	height: 10%;
}
.logo {
	width: 60px;
}
.subhead {
	display: none;
}
/* door animations */

.doorOpen {
  /*prespectiv creates the door open effect*/
  transform: perspective(1200px) translateZ(0px) translateX(0px) translateY(0px) rotateY(-105deg);
}

/***** GOOD/BAD PLACE STYLES*****/
.container {
	background: rgba(255,255,255,.8);
	display: flex;
	flex: 1;
	flex-wrap: wrap;
	justify-content: center;
	max-width: 100vw;
}
header {
	display: flex;
	flex: 1;
	flex-basis: 100%;
	background-color: #fff;
	height: 5rem;
	box-shadow: 0 4px 2px -2px #bbb;
	z-index: 999;
	position: fixed;
	width: 100%;
}
nav {
	display: flex;
	flex: 1;
	flex-basis: 100%;
	padding-bottom: 1rem;
}
nav .nav-lobby img, .nav-bad img, .nav-good img {
	width: 1.5rem;
	height: 3rem;
}
nav .nav-logo img {
	width: 5rem;
	height: 5rem;
}
nav div {
	display: flex;
	flex: 1;
	justify-content: center;
	text-decoration: none;
	font-weight: 900;
}
nav div:first-child {
	margin-right: auto;
	justify-content: flex-start;
	padding-left: 1rem;
}
nav div:last-child {
	margin-left: auto;
	justify-content: flex-end;
	padding-right: 1rem;
}
nav div span {
	color: #000;
	display: none;
}
nav .nav-item {
	margin-top: 1rem;
}
.top-banner {
	display: flex;
	flex: 1;
	flex-wrap: wrap;
	justify-content: center;
	padding: 0 8%;
}
.top-banner h1, .top-banner p, .top-banner article, .top-banner h2, .top-banner ul, .top-banner li{
	display: flex;
	flex: 1;
	flex-basis: 100%;
	justify-content: center;
}
.top-banner h1 {
	font-weight: 900;
	font-size: 2rem;
	text-align: center;
	margin: 5% 0;
	margin-top: 8rem;
}
.top-banner p {
	text-align: center;
	margin: 1rem 0;
}
.top-banner article {
	flex-wrap: wrap;
	margin-top: 5%;
	padding: 0 10%;
}
.top-banner h2 {
	justify-content: flex-start;
	font-size: 1.2rem;
	padding-bottom: 5px;
}
.top-banner ul {
	justify-content: flex-start;
	flex-wrap: wrap;
}
.top-banner li {
	justify-content: flex-start;
	padding: 5px 0;
}
.top-banner li::before {
	content: "\2714";
	padding-right: 5%;
}

/***** PLUGIN STYLES *****/
.lightbox-section {
	margin-top: 3rem;
}
#lightgallery {
	display: flex;
	flex: 1;
	flex-basis: 100%;
	flex-wrap: wrap;
}
#lightgallery > a {
	display: flex;
	flex: .5;
	flex-basis: 50%;
}
#lightgallery > a > img {
	display: flex;
	flex: 1;
	width: 100%;
}
.carousel-section {
	overflow: hidden;
}
.carousel {
	background: #19629F;
	display: flex;
	flex: 1;
	flex-basis: 100%;
	color: #fff;
}
.carousel .carousel-slide {
	background: #19629F;
	text-align: center;
	width: 100%;
}
.carousel .carousel-slide-inner {
	padding: 2rem;
}
.carousel .carousel-slide-inner p{
	margin-top: 1rem;
}
.bad-place .carousel, .bad-place .carousel .carousel-slide, .bad-place .carousel .slick-dots {
	background: #000;
}
.slick-dots {
	color: #fff;
	display: inline-block;
	background: #19629F;
	padding-bottom: 1rem;
	text-align: center;
}
.slick-dots li button::before, .slick-dots li.slick-active button::before{
	color: #fff;
}

@media screen and (min-width: 610px) {
	/* homepage */
	.door img {
    width: 100px;
	}
	.home h2 {
    padding-bottom: 2.5%;
	}
	/* good & bad place */
	.top-banner h2 {
		padding-bottom: 10px;
	}
	.top-banner article {
		flex: .5;
	}
	#lightgallery > a {
		display: flex;
		flex: .5;
		flex-basis: 33%;
	}
	.carousel-section {
		margin: 5rem;
	}
	nav .nav-item {
		margin-top: 0;
	}
	nav .nav-item a {
		justify-content: center;
		align-items: center;
		flex-wrap: nowrap;
		padding-top: 1rem;
	}
	nav .nav-item span {
		display: inline-block;
		margin: 0 2rem;
		padding-top: .75rem;
	}
	nav .nav-item img {
		position: absolute;
	}
	nav .nav-item:first-child a {
		padding-right: 0;
	}
	nav .nav-item:last-child a {
		padding-right: 1.5rem;
	}
	nav .nav-item:first-child a span {
		margin-right: 0;
	}
	nav .nav-item:last-child a span {
		margin-right: .5rem;
		margin-left: 0;
	}
}

@media screen and (min-width: 720px) {
	body {
		font-size: 1.2rem;
	}
	/* homepage */
	.home {
		flex-flow: row;
	}
	.home-banner {
		order: 3;
		position: fixed;
		width: 100%;
		height: 160px;
		align-self: flex-end;
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		align-content: center;
		padding-bottom: 20px;
	}
	.home-banner h1 {
		width: 100%;
	}
	.subhead {
		display: block;
		font-size: 2rem;
	}
	.logo {
		width: 70px;
	}
	.good-home, .bad-home {
		height: 80vh;
		width: 50%;
	}
	.door img {
    width: 180px;
	}
	/* https://codepen.io/Stockin/pen/XPvpoB */
	.door img:hover:before {
		transform: scale(1.5);
  	box-shadow: 0 0 35px #fff;
  	filter: blur(5px);
	}
	.door img:hover {
	  box-shadow: 0 0 35px #fff;
	  text-shadow: 0 0 35px #fff;
	}
	.bad-home .door img:hover:before {
  	box-shadow: 0 0 35px #000;
	}
	.bad-home .door img:hover {
	  box-shadow: 0 0 35px #000;
	  text-shadow: 0 0 35px #000;
	}
	.home h2 {
    padding-bottom: 8%;
		font-size: 1.8rem;
	}
	
}
@media screen and (min-width: 800px) {
	/* good & bad place */
	nav a:last-child {
		padding-right: 3rem;
	}
	nav a.nav-logo {
		padding-right: 0;
	}
}
@media screen and (min-width: 900px) {
	/* homepage */
	.logo {
		width: 80px;
	}
	/* good & bad place */
	.container {
		display: flex;
		justify-content: center;
		align-self: center;
		max-width: 60vw;
	}
	#lightgallery {
		margin: 0 5vw;
	}
}

@media screen and (min-width: 1440px) {
	/* homepage */
	.door img {
    width: 230px;
	}
	.home h2 {
    padding-bottom: 6%;
    font-size: 1.8rem;
	}
	.logo {
		width: 90px;
	}
	.home-banner {
		padding-bottom: 30px;
	}
}

